# ice-station-zebra

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  data.json  demo_pipeline.ipynb  demo_pipeline.py  hp_tune.slurm  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: regular-issue.yml
.github/workflows/: code_style.yaml  deploy_test.yml  docs-preview.yaml  docs.yaml  test_code.yaml  test_coverage.yaml
configs/: ddpm_config.yaml
docs/: MODEL_CARD.md  _config.yml  _toc.yml  adding-models.md  adding-new-models.md  cli.md  intro.md  myst.yml  quickstart.md
docs/api/: data_loaders.rst  evaluation.rst  index.md  models-common.rst  models-decoders.rst  models-diffusion.rst  models-encoders.rst  models.rst  training.rst  types.rst  visualisations.rst
docs/tutorials/: case_study_whale_corridors.ipynb  demo_pipeline.ipynb  index.md  persistence.ipynb
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_01d6d3d4f2abd810___init___py.html  z_01d6d3d4f2abd810_weighted_bce_loss_py.html  z_01d6d3d4f2abd810_weighted_l1_loss_py.html  z_01d6d3d4f2abd810_weighted_mse_loss_py.html  z_036628fc610e2005___init___py.html  z_036628fc610e2005_weighted_bce_loss_py.html  z_036628fc610e2005_weighted_l1_loss_py.html  z_036628fc610e2005_weighted_mse_loss_py.html  z_0374d7b9129911a2___init___py.html  z_0374d7b9129911a2_complex_datatypes_py.html  z_0374d7b9129911a2_enums_py.html  z_0374d7b9129911a2_simple_datatypes_py.html  z_0374d7b9129911a2_typedefs_py.html  z_0563d6b5c65c7cb9___init___py.html  z_0563d6b5c65c7cb9_accelerator_py.html  z_0aca00fa50c255e7___init___py.html  z_0aca00fa50c255e7_base_processor_py.html  z_0aca00fa50c255e7_null_py.html  z_0aca00fa50c255e7_unet_py.html  z_0aca00fa50c255e7_vit_py.html  z_0d15a84c26607823___init___py.html  z_0d15a84c26607823_geographic_field_py.html  z_0d15a84c26607823_geographic_grid_py.html  z_0d15a84c26607823_geographic_metadata_py.html  z_0d15a84c26607823_grid_factory_py.html  z_0d15a84c26607823_reproject_py.html  z_0d1a7d97131d7356___init___py.html  z_0d1a7d97131d7356_cli_py.html  z_0d1a7d97131d7356_evaluator_py.html  z_10b9d604035be9ba___init___py.html  z_10b9d604035be9ba_cli_py.html  z_10b9d604035be9ba_evaluator_py.html  z_1881fbadf692de0e___init___py.html  z_1881fbadf692de0e_convert_py.html  z_1881fbadf692de0e_helpers_py.html  z_1881fbadf692de0e_land_mask_py.html  (+211 more)
ice_station_zebra/: __init__.py  cli.py  exceptions.py  plugins.py  types.py  utils.py
ice_station_zebra/callbacks/: __init__.py  ema_weight_averaging_callback.py  metadata.py  metric_summary_callback.py  plotting_callback.py  raw_inputs_callback.py  unconditional_checkpoint.py  wandb_metric_callback.py  weight_averaging.py
ice_station_zebra/cli/: __init__.py  hydra.py  main.py
ice_station_zebra/commands/: __init__.py  test.py  train.py
ice_station_zebra/config/: base.yaml  base_baskerville.yaml  base_dawn.yaml  base_isambardai.yaml  baskerville.yaml  dawn.yaml  demo-north.yaml  demo.yaml  demo_nb.yaml  demo_north.yaml  demo_notebook.yaml  full.yaml  isambard-ai.yaml  persistence.yaml  visualization.yaml  whale_corridors.yaml  whale_telemetry.yaml  whale_viz.local.yaml  whale_viz.yaml  zebra.yaml
ice_station_zebra/data_loaders/: __init__.py  combined_dataset.py  common_data_module.py  single_dataset.py  zebra_data_module.py  zebra_dataset.py
ice_station_zebra/data_processors/: __init__.py  cli.py  data_downloader.py  data_downloader_factory.py  zebra_data_processor.py  zebra_data_processor_factory.py  zebra_dataset.py  zebra_dataset_factory.py
ice_station_zebra/datasets/: __init__.py  anemoi_dataset.py  anemoi_dataset_factory.py  cli.py  osisaf.py  zebra_dataset.py
ice_station_zebra/evaluation/: __init__.py  cli.py  evaluator.py
ice_station_zebra/models/: __init__.py  base_model.py  ddpm.py  encode_process_decode.py  persistence.py  zebra_model.py
ice_station_zebra/training/: __init__.py  cli.py  trainer.py
ice_station_zebra/types/: __init__.py  complex_datatypes.py  enums.py  simple_datatypes.py  typedefs.py
ice_station_zebra/visualisations/: __init__.py  animation_helper.py  cli.py  convert.py  helpers.py  land_mask.py  layout.py  metadata.py  plotter.py  plotting_core.py  plotting_maps.py  plotting_raw_inputs.py  plotting_static.py  plotting_video.py  range_check.py  sanity.py  sea_ice_concentration.py
ice_station_zebra/xpu/: __init__.py  accelerator.py
icenet_mp/: model_service.py  plugins.py  utils.py
icenet_mp/callbacks/: __init__.py  activation_saver.py  metric_summary_callback.py  plotting_callback.py
icenet_mp/cli/: datasets.py  evaluate.py  hydra.py  main.py  train.py
icenet_mp/config/: base.yaml  base_baskerville.yaml  base_dawn.yaml  base_isambardai.yaml  base_persistence.yaml  demo_north.yaml  demo_whale_corridors.yaml  sample.yaml  whale_corridors.yaml
icenet_mp/data_loaders/: combined_dataset.py  common_data_module.py  single_dataset.py
icenet_mp/data_processors/: __init__.py  cli.py  data_downloader.py  data_downloader_factory.py
icenet_mp/evaluation/: cli.py  evaluator.py
icenet_mp/geotools/: __init__.py  geographic_field.py  (+4 more)
icenetmp/: plugins.py
models/: __init__.py  gaussian_diffusion.py  lit_diffusion.py  unet_diffusion.py
notebook/: 0_notebook_tf.ipynb  1_icenet_forecast_unet.ipynb  2_icenet_forecast_cgan.ipynb  3_icenet_forecast_DDPM.ipynb  environment.yml  environment_full.yml  environment_py10.yml  persistence.ipynb  seaice_env_min.yml
notebooks/: 0_notebook_tf.ipynb  1_icenet_forecast_UNET_north_prototype2020_ISAR8.ipynb  1_icenet_forecast_unet.ipynb  2_icenet_forecast_cgan.ipynb  3_icenet_forecast_DDPM.ipynb  3_icenet_forecast_DDPM_north_prototype2020_ISAR8.ipynb  ARGO_data.ipynb  ARGO_data_Isabel_realdata.ipynb  ARGO_data_MC_realdata.ipynb  README.md  case_study_whale_corridors.ipynb  demo_pipeline.ipynb  extract_anomalies.ipynb  layer_diagnostics.ipynb  nongriddedenv.yaml  persistence.ipynb
tests/: conftest.py  test_cli.py  test_model_service.py
trainers/: __init__.py  diffusion_trainer.py  train_diffusion.py
utils/: __init__.py  losses.py  metrics.py
(+477 files in other folders)
