[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = "ice-station-zebra"
version = "0.1.0"
description = "A pipeline for predicting sea ice."
readme = "README.md"
authors = [
    { name = "James Robinson", email = "james.em.robinson@gmail.com" }
]
requires-python = ">=3.11,<3.13" # Note "3.13" is currently incompatible with the tensorflow requirement from icenet
dependencies = [
    "anemoi-datasets>=0.5.25",
    "cachetools>=6.1.0",
    "cdsapi>=0.7.6",
    "hydra-core>=1.3.2",
    "icenet==0.2.7", # newer versions require netCDF4<1.6.1 which does not work on macOS 15
    "jaxtyping>=0.3.2",
    "lightning>=2.5.1",
    "matplotlib>=3.10.3",
    "netcdf4>=1.7.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "typer>=0.16.0",
    "types-cachetools>=6.1.0",
    "wandb>=0.21.0",
    "xarray>=2025.3.0",
    "zarr<3.0.0", # v3 is not compatible with anemoi
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pandas-stubs>=2.3.0.250703",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[project.scripts]
zebra = "ice_station_zebra.cli:app"

[tool.coverage.paths]
source = ["ice_station_zebra/"]

[tool.coverage.run]
relative_files = true
omit= [
  "tests/*",
]

[[tool.mypy.overrides]]
module = [
    "anemoi.datasets.*",
    "icenet.data.sic.*",
    "zarr.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--cov=ice_station_zebra",
    "--cov-report=term-missing",
    "-vvv",
]

[tool.ruff]
line-length = 88
exclude = ["notebooks/*ipynb"]

[tool.ruff.lint]
# extend-select = ["I"]
select = ["ALL"]
ignore = [
    "COM812", # conflicts with formatter
    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D102", # undocumented-public-method
    "D103", # undocumented-public-function
    "D104", # undocumented-public-package
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D203", # one-blank-line-before-class [conflicts with D211]
    "D209", # new-line-after-last-paragraph
    "D212", # multi-line-summary-first-line
    "D213", # multi-line-summary-second-line [conflicts with D212]
    "D400", # missing-trailing-period
    "D401", # non-imperative-mood
    "D413", # missing-blank-line-after-last-section"
    "D415", # missing-terminal-punctuation
    "D417", # undocumented-param
    "E501", # line-too-long
    "PLR0913", # too-many-arguments
    "RUF022", # unsorted-dunder-all
    "SIM118", # in-dict-keys
    "SLF001", # private-member-access
    "TC001", # typing-only-first-party-import
    "TC002", # typing-only-third-party-import
    "TRY003", # raise-vanilla-args
    "UP006", # non-pep585-annotation
    "UP035", # deprecated-import
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests...
    "INP001", # allow implicit namespace in tests
    "PLR2004", # allow magic-number comparison in tests
]

[tool.uv.build-backend]
module-root = ""
