[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = "ice-station-zebra"
version = "0.1.0"
description = "A pipeline for predicting sea ice."
readme = "README.md"
authors = [
    { name = "James Robinson", email = "james.em.robinson@gmail.com" }
]
requires-python = ">=3.11,<3.13" # Note "3.13" is currently incompatible with the tensorflow requirement from icenet
dependencies = [
    "anemoi-datasets>=0.5.25",
    "anemoi-transform>=0.1.16",
    "cachetools>=6.1.0",
    "cdsapi>=0.7.6",
    "filelock>=3.12.0",
    "hydra-core>=1.3.2",
    "icenet==0.2.7", # newer versions require netCDF4<1.6.1 which does not work on macOS 15
    "jaxtyping>=0.3.2",
    "lightning>=2.5.1",
    "lightning-xpu@git+https://github.com/kh296/lightning-xpu",
    "matplotlib>=3.10.3",
    "netcdf4>=1.7.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "torch-ema>=0.3",
    "typer>=0.16.0",
    "types-cachetools>=6.1.0",
    "wandb>=0.21.0",
    "xarray>=2025.3.0",
    "zarr<3.0.0", # v3 is not compatible with anemoi
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pandas-stubs>=2.3.0.250703",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
notebooks = [
    "cmocean>=4.0.3",
    "download-toolbox>=0.0.6",
    "jupyter>=1.1.1",
]

[project.scripts]
zebra = "ice_station_zebra.cli:app"

[tool.coverage.paths]
source = ["ice_station_zebra/"]

[tool.coverage.run]
relative_files = true
omit= [
  "tests/*",
]

[[tool.mypy.overrides]]
module = [
    "anemoi.datasets.*",
    "anemoi.transform.*",
    "earthkit.*",
    "icenet.data.sic.*",
    "zarr.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--cov=ice_station_zebra",
    "--cov-report=term-missing",
    "-vvv",
]

[tool.ruff]
line-length = 88
exclude = ["notebooks/*ipynb"]

[tool.ruff.lint]
# extend-select = ["I"]
select = ["ALL"]
ignore = [
    "COM812", # conflicts with formatter
    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D102", # undocumented-public-method
    "D104", # undocumented-public-package
    "D203", # one-blank-line-before-class [conflicts with D211]
    "D213", # multi-line-summary-second-line [conflicts with D212]
    "D401", # non-imperative-mood
    "E501", # line-too-long
    "SLF001", # private-member-access
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "DTZ001", # allow unlocalised datetimes in tests
    "S101", # allow asserts in tests
    "INP001", # allow implicit namespace in tests
    "PLR0913", # allow unlimited arguments in tests
    "PLR2004", # allow magic-number comparison in tests
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.uv.build-backend]
module-root = ""
